--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -17,3 +17,13 @@ body {
 .specs{
   font-size: 10px !important;
 }
+
+.pagespechold{
+  padding-top: 12px;
+}
+
+.pagespec{
+  border: 2px solid #6c757d;
+  padding: 8px 5px;
+  font-size: 18px;
+}
