Added time in Dashboard page template

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -18,6 +18,10 @@ body {
   font-size: 10px !important;
 }
 
+.time{
+  margin-bottom: 10px !important;
+}
+
 .pagespechold{
   padding-top: 12px;
 }
