--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -14,6 +14,11 @@ body {
   border: 5px solid #424242;
 }
 
+.pillspage {
+  padding: 15px 5px;
+  border: 5px solid #424242;
+}
+
 .specs{
   font-size: 10px !important;
 }
@@ -30,4 +35,8 @@ body {
   border: 2px solid #6c757d;
   padding: 8px 5px;
   font-size: 18px;
+}
+
+.viewreport{
+  padding-top: 10px;
 }
